objects/Setup__c.object
<CustomObject>
    <description>This object is used to setup Schoolforce and is referenced in multiple pieces of code.  There should be one setup object per school.</description>
    <fields>
        <fullName>ActivateRelated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activate Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this school setup active for this school year?</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Referal_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that determines if the Referal details section should be displayed in Behavior Module.</description>
        <label>Show Referral Details on Behavior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEEB_Code__c</fullName>
        <inlineHelpText>A CEEB code is a standardized ID number that is assigned to a high school, college, or university.  CEEB codes are issued by the Educational Testing Service (ETS).</inlineHelpText>
        <label>CEEB Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_Class_Rank__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should the school calculate class rank? If selected, the system will calculate the Class Rank per grade.  Admins will have the option of displaying the Class Rank on the Report Card on the Generate Student Documents page.</inlineHelpText>
        <label>Calculate Student Class Rank?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <description>Choose a calculation type for standard based grading.</description>
        <inlineHelpText>Select a calculation type for standard-based grading. This must be selected if using standards - based grading.</inlineHelpText>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mean</fullName>
                </value>
                <value>
                    <fullName>Power Law</fullName>
                </value>
                <value>
                    <fullName>Highest</fullName>
                </value>
                <value>
                    <fullName>Most Recent</fullName>
                </value>
                <value>
                    <fullName>Law of Decaying Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cascade_Daily_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is checked and Sectional Attendance is enabled; entries made from Daily Attendance submission will cascade to sectional attendance records from the same day</inlineHelpText>
        <label>Cascade Daily Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chronological_Periods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if period times should follow chronological order.</description>
        <inlineHelpText>Check when school does not allow periods to overlap during a given school day.</inlineHelpText>
        <label>Chronological Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configure_Course_Catalog__c</fullName>
        <formula>IF( Course_Catalog__c !=&apos;&apos;, HYPERLINK(&apos;/apex/core_CourseCatalogSetup?setupId=&apos;+ Id,  Course_Catalog__r.Name, &quot;_top&quot;)  ,
HYPERLINK(&apos;/apex/core_CourseCatalogSetup?setupId=&apos;+ Id  ,   IMAGE(&apos;/img/feeds/follow12.png&apos;, &apos;Add&apos;),&quot;_top&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Course Catalog</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configure_Grade_Scale_Catalog__c</fullName>
        <formula>IF( Grade_Scale_Catalog__c !=&apos;&apos;, HYPERLINK(&apos;/apex/SchoolSetup_Gradebook?setupId=&apos;+ Id+&apos;#gradeScales&apos;  , Grade_Scale_Catalog__r.Name, &quot;_top&quot;) ,
HYPERLINK(&apos;/apex/SchoolSetup_Gradebook?setupId=&apos;+Id+&apos;#gradeScales&apos;, IMAGE(&apos;/img/feeds/follow12.png&apos;, &apos;Add&apos;),&quot;_top&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Grade Scale Catalog</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configure_School_Term__c</fullName>
        <formula>IF(  Term__c  !=&apos;&apos;, HYPERLINK(&apos;/apex/core_TermSetup_v2?setupId=&apos;+ Id ,  Term__r.Name__c , &quot;_top&quot;) , 
HYPERLINK(&apos;/apex/core_TermSetup_v2?setupId=&apos;+ Id , IMAGE(&apos;/img/feeds/follow12.png&apos;, &apos;Add&apos;),&quot;_top&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure School Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counselor__c</fullName>
        <inlineHelpText>The Counselor  will appear on the Transcript. Please enter the name exactly as you want it to appear on the transcript, &quot;Ms. Alice Jones&quot; or &quot;Alice Jones.&quot;</inlineHelpText>
        <label>Counselor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to selected course catalog to use for the School Year Setup</description>
        <label>Course Catalog</label>
        <referenceTo>Course_Catalog__c</referenceTo>
        <relationshipLabel>Setup</relationshipLabel>
        <relationshipName>Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Points_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sun</fullName>
                </value>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tue</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thur</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Community_Service_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option to display the total career to date Community Service Hours for this student.  This total is found on the Student Contact record.</inlineHelpText>
        <label>Display Community Service Hours?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Cumulative_Weighted_GPA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to display the cumulative high school weighted GPA for this student. This field displays the value in the Weighted GPA to Date field on the Student record.</inlineHelpText>
        <label>Display Cumulative Weighted GPA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_GPA_on_Report_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option to display the GPA on Report Cards, Transcripts, Progress Reports and the Student/Parent Portal.</inlineHelpText>
        <label>Display Unweighted GPA on Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Incomplete_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Incomplete Assignments are based on the number of Gradebook Assignments that have a value of I, INC, IN, IC.  These do not include grades with &quot;N&quot; or that are excluded from the section grade.</inlineHelpText>
        <label>Display Incomplete Assignments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Legend_on_Report_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option to display the legend on the Report Card.  The legend includes: A, if school is using sectional attendance, H if the school is using the HW module, IA, the incomplete assignment account, and labels for each reporting period.</inlineHelpText>
        <label>Display Legend on Report Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Reading_Level_On_Report_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selecting this displays the students&apos; reading levels on their report cards and progress reports.</inlineHelpText>
        <label>Display Reading Level On Report Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Weighted_GPA_on_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option to display the weighted GPA on Report Cards and Progress Reports</inlineHelpText>
        <label>Display Weighted GPA on Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Documents__c</fullName>
        <description>This controls what is allowed to be selected in the document generation page</description>
        <inlineHelpText>Which documents should this setup be using?</inlineHelpText>
        <label>Evaluation Documents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Report Card - High School</fullName>
                </value>
                <value>
                    <fullName>Report Card - Elementary School</fullName>
                </value>
                <value>
                    <fullName>Progress Report - High School</fullName>
                </value>
                <value>
                    <fullName>Progress Report - Elementary School</fullName>
                </value>
                <value>
                    <fullName>Transcript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPA_By_Reporting_Period_Rolling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether calculations in GPA batch carry over from Reporting period to reporting period or are independently calculated.</description>
        <inlineHelpText>If this checkbox is checked grades from previous reporting periods will be factored into student&apos;s GPA for current reporting period.  IE for Q2 GPA, Section Grades from Q1 &amp; Q2 will factor into calculations.</inlineHelpText>
        <label>Rolling GPA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grade Scale Catalog</label>
        <referenceTo>Grade_Scale_Catalog__c</referenceTo>
        <relationshipLabel>Setup</relationshipLabel>
        <relationshipName>Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grade_Span__c</fullName>
        <description>Used to identify which grades are taught in a given school/setup. Because it&apos;s tied to the setup record it can change year-to year</description>
        <inlineHelpText>Select the grade level(s) that will be taught at this school in the current school year.</inlineHelpText>
        <label>Grade Span</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>PK-3</fullName>
                </value>
                <value>
                    <fullName>PK-4</fullName>
                </value>
                <value>
                    <fullName>PK Pre-K</fullName>
                </value>
                <value>
                    <fullName>Kindergarten/Preschool</fullName>
                </value>
                <value>
                    <fullName>KG Kindergarten</fullName>
                </value>
                <value>
                    <fullName>PG Postgraduate/Adult</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>UN Ungraded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, schedule is based on students moving between classes as a group, enabling Schedule Templates &amp; scheduling in a Group Agenda view;
If Unchecked, school schedule is based on periods, enabling Period Templates &amp; scheduling in a Grid View</inlineHelpText>
        <label>Group Based ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Section_Grades__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This toggles the display of section grades on report cards and progress reports</inlineHelpText>
        <label>Include Section Grades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Law_of_Decaying_Average_Weight__c</fullName>
        <description>This field is only used for the standard calculation type: Law of Decaying Average.  A value of 1.00 to 0.00 is desired in determining the weight.</description>
        <label>Law of Decaying Average Weight</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_School_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New School Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_on_Transcripts__c</fullName>
        <description>A comment/note for all transcripts provided by the Admin on transcript documents for all student transcripts.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Scores__c</fullName>
        <description>This field is only used for calculating &apos;Average of X Most Recent&apos; calculation type.</description>
        <label>Number of Scores</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Track_Threshold__c</fullName>
        <description>This is a secondary threshold used for a three-tiered grade tracking system</description>
        <inlineHelpText>Select a grade (0-100 scale) that this school defines as &quot;On Track&quot; or &quot;Green.&quot; Any section grades that are above this number will display in the Gradebook UI as Green.  Any number that falls between this  and the Passing Grade threshold will be yellow.</inlineHelpText>
        <label>On Track Threshold</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passing_Grade_Threshold__c</fullName>
        <inlineHelpText>Select the grade threshold (0-100 scale) that defines passing for this school.  Any section grade that is calculated below this number will display in the Gradebook UI as red.  Any number between this and the &quot;On Track&quot; number will yellow.</inlineHelpText>
        <label>Passing Grade Threshold</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Frequency__c</fullName>
        <label>Points Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Points_Reset_Date__c</fullName>
        <description>This field will be set  by an apex job . This field will be used to determine today&apos;s Current Balance field on student record.</description>
        <label>Points Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Points_Reset_Value__c</fullName>
        <label>Points Reset Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processed_EOY_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed EOY Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_Historical_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed Historical Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_Setup_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed Setup Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Progress_Report_Standard_Display__c</fullName>
        <description>This determines how &quot;Standards Only&quot; school&apos;s progress reports display standard or strand grades</description>
        <label>Progress Report Standard Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standards</fullName>
                    <default>true</default>
                    <label>Standards</label>
                </value>
                <value>
                    <fullName>Strands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purged_EOY_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purged EOY Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purged_Two_Years_Old_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purged Two Years Old Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Read_Only_Attendance_Wizard_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only Attendance Wizard Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registrar_Phone__c</fullName>
        <inlineHelpText>Please enter the phone number for the registrar at your school. This field will appear on transcripts.</inlineHelpText>
        <label>Registrar Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registrar__c</fullName>
        <inlineHelpText>The Registrar will appear on the Transcript. Please enter the name exactly as you want it to appear on the transcript, &quot;Mr. Bob Smith&quot; or &quot;Bob Smith.&quot;</inlineHelpText>
        <label>Registrar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Card_Standard_Display__c</fullName>
        <description>This determines how &quot;Standards Only&quot; report cards display standard or strand grades</description>
        <label>Report Card Standard Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standards</fullName>
                    <default>true</default>
                    <label>Standards</label>
                </value>
                <value>
                    <fullName>Strands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rolling_Standard_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether standard grade calculations will carry over from reporting period to reporting period or are independently calculated.</description>
        <inlineHelpText>Select if you want a standard grade to include the assignment grades from the first through the current reporting period (e.g., a specific standard in Q3 is calculated using the grades from Q1-Q3).</inlineHelpText>
        <label>Rolling Standard Grade?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_Dependent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean field to provide dynamic logic to Scheduler Modules</description>
        <inlineHelpText>If the school related to the setup needs to configure rooms to manage scheduling Check field, otherwise set to Unchecked</inlineHelpText>
        <label>Room Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_End_Date__c</fullName>
        <label>Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Date__c</fullName>
        <label>Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_Calendar__c</fullName>
        <formula>HYPERLINK(&apos;/apex/ReportingPeriodCalendarView?setupid=&apos;+ Id , &apos;Calendar&apos;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Logo_for_Portal__c</fullName>
        <inlineHelpText>Please upload the image to use as the school logo for student portal here.  This image will appear in the top left corner of the student portal.  Maximum size is 175px w x 225px h.</inlineHelpText>
        <label>School Logo for Portal</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>School_Using_PGV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether the school will be using the PGV.</description>
        <inlineHelpText>Flag to indicate whether the school will be using the PGV (Parent Gradebook View).</inlineHelpText>
        <label>School Using PGV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>School</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Summer School</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Setup</relationshipLabel>
        <relationshipName>Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_picture__c</fullName>
        <description>School Picture</description>
        <inlineHelpText>Please upload the image to use as the school logo for student documents here.  This image will appear in the top left corner of report cards, progress reports, and transcripts.  Maximum size is 190px w x 50px h</inlineHelpText>
        <label>School Logo for Documents</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_Wizard__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Scheduler_SectionWizard&apos;,&apos;Section Wizard for &apos;+ School__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Wizard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Activities_on_Transcripts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Admins to determine if &apos;Activities&apos; under &apos;Additional Information&apos; will display on transcript documents for all transcript documents.</description>
        <label>Show Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Alerts_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will display alerts related to a school, section, or individual student in the Portal.</inlineHelpText>
        <label>Show Alerts in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Assessments_on_Transcripts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox aid Admins in displaying Assessment information on all transcript documents.</description>
        <label>Show Assessments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Attendance_Sections_in_Gradebook__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if your school is taking sectional attendance and wants to display the sectional attendance within the Gradebook UI.</inlineHelpText>
        <label>Show Attendance Sections In Gradebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Attendance_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will display a student&apos;s daily and sectional attendance details in the Portal (including absences, tardies, and total time lost).</inlineHelpText>
        <label>Show Attendance in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Awards_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will display awards given to a student.</inlineHelpText>
        <label>Show Awards in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Behavior_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will display behavior incidents (Date and Incident Title only).</inlineHelpText>
        <label>Show Behavior in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Calendar_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will allow schools to display a calendar visible to students and parents.</inlineHelpText>
        <label>Show Calendar in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Class_Rank__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to show Class Rank on Report Card/Progress Reports</description>
        <inlineHelpText>Check this field to show Class Rank on Report Card/Progress Reports</inlineHelpText>
        <label>Show Class Rank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Class_Rank_on_Transcripts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is specific for transcripts.</description>
        <inlineHelpText>Show Class Rank on transcripts.</inlineHelpText>
        <label>Show Class Rank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Community_Service_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Show Community Service Hours in Portal?</inlineHelpText>
        <label>Show Community Service In Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Daily_Attendance_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is checked if Daily Attendance is applicable to the school</description>
        <label>Show Daily Attendance in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Gradebook_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will display sectional grades, assignment grades, and assignments details. This will also allow students to upload assignments directly to teachers.</inlineHelpText>
        <label>Show Gradebook in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Homework_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should homework be displayed in Portal?</description>
        <inlineHelpText>Should data from the Homework Module display in Portal? If checked, the Homework Module must be set up.</inlineHelpText>
        <label>Show Homework in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Homework_Percentage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This toggles the display of the &quot;Homework&quot; column on report cards/progress reports.</inlineHelpText>
        <label>Show Homework Percentage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Honors_on_Transcripts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Admins to determine if the &apos;Honors&apos; section under &apos;Additonal Information&apos; should display on transcript documents for all student transcripts.</description>
        <label>Show Honors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Meals_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Show Meal Balance on Portal?</inlineHelpText>
        <label>Show Meals in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Normalizations_on_Report_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Final Grade Normalization legend on Report Cards and Progress Reports?</description>
        <inlineHelpText>Show Final Grade Normalization legend on Report Cards and Progress Reports?</inlineHelpText>
        <label>Show Grade Scales On Report Cards?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>